# mandalas

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  mandalas.sublime-project
source/: generator.cpp  generator.hpp  main-gui.cpp  main-tui.cpp  main.cpp
source/util/: array.hpp  extensioned_path_constraint.cpp  extensioned_path_constraint.hpp  math.hpp  nonzero_number_constraint.hpp  suffixed_number_constraint.hpp  suffixed_number_parser.cpp  suffixed_number_parser.hpp  video.cpp  video.hpp
